Working on intro section.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#about-myself">About Myself</a></li>
+            <li><a href="#my-hobbies">My Hobbies</a></li>
+            <li><a href="#my-cv">My CV</a></li>
+            <li><a href="#links">Links</a></li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1>Zion A</h1><div id="header-cursor"></div>
+    </header>
+
+    <main>
+        <div id="intro">
+            <aside>
+                <div id="tv">
+                    <img src="./images/tv.png" id="tv-frame"/>
+                    <img src="./images/me_silly.png" id="me-silly"/>
+                </div>
+            </aside>
+            <article>
+                <section>
+                <h4 id="about-myself">About Myself</h4>
+                <p>
+                    My name is Zion Adewale and I am a student at Queen Mary University of London 
+                    within the School of Electronic Engineering. I am studying BSc Computer Science with a Year in Industry.
+                </p>
+                <h4 id="my-hobbies">My Hobbies</h4>
+                <p>
+                    I tweak my home lab and play games and TCGs, I also take time to draw occasionally.
+                </p>
+                <h4 id="my-cv">My CV</h4>
+                <p>
+                    You can download my CV via this <a href="/my_CV.html" download>link</a>
+                </p>
+                </section>
+            </article>
+        </div>
+
+
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
