--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#about-myself">About Myself</a></li>
-            <li><a href="#my-hobbies">My Hobbies</a></li>
-            <li><a href="#my-cv">My CV</a></li>
-            <li><a href="#links">Links</a></li>
+            <li><a href="#intro">About Myself</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -30,14 +31,10 @@
             </aside>
             <article>
                 <section>
-                <h4 id="about-myself">About Myself</h4>
+                <h4>About Myself</h4>
                 <p>
-                    My name is Zion Adewale and I am a student at Queen Mary University of London 
-                    within the School of Electronic Engineering. I am studying BSc Computer Science with a Year in Industry.
-                </p>
-                <h4 id="my-hobbies">My Hobbies</h4>
-                <p>
-                    I tweak my home lab and play games and TCGs, I also take time to draw occasionally.
+                    My name is <b class="important">Zion</b> Adewale and I am a student at <b class="important">Queen Mary University of London</b> 
+                    within the School of Electronic Engineering. I am studying <b class="important">BSc Computer Science</b> with a Year in Industry.
                 </p>
                 <h4 id="my-cv">My CV</h4>
                 <p>
@@ -47,7 +44,87 @@
             </article>
         </div>
 
+        <div id="skills">
+            <article>
+                <section>
+                    <h4>Skills</h4>
+                    <p>
+                        I have programming experience in web development with langauges like <b class="important">JavaScript</b> and <b class="important">Typescript</b> as well as 
+                        with frameworks like <b class="important">Svelte</b> and <b class="important">React JS.</b>
 
+                        I also have experience with <b class="important">Java</b>, <b class="important">Kotlin</b> and <b class="important">Python</b>. 
+                    </p>
+                    <p>
+                        I have great experience with Linux distributions like NixOS, <b class="important">Ubuntu Server</b>, Arch and Mint.
+                    </p>
+                    <p>
+                        I also have a solid understanding about <b class="important">computer hardware</b> and have built personal computers including my home lab.
+                    </p>
+                </section>
+            </article>
+            <aside>
+                <img src="./images/quill_book_ink.png" id="books">
+            </aside>
+        </div>
+
+        <div id="portfolio">
+            <article>
+                <h4>Portfolio</h4>
+                <section>
+                    <p>
+                        <b><i><a href="https://github.com/octoberluwa/purpfish" target="_blank">Purpfish</a></i></b>
+                        <br/><br/>
+                        A <b class="important">learning web app</b> for kids that I am developing. It uses <b class="important">text to speech</b> to help with <b class="important">spelling</b> and has questions relating to <b class="important">times tables</b>.
+                        It uses <b class="important">React JS</b> so that everything is seamless and less time waiting for the page to refresh due to <b class="important">dynamic updates</b>. 
+                    </p>
+                </section>
+                <section>
+                    <p>
+                        <b><i><a href="https://github.com/octoberluwa/portfolio-website" target="_blank">Portfolio Website</a></i></b>
+                        <br/><br/>
+                        The website <b class="important">you are viewing right now!</b> It has been made so far with only <b class="important">HTML and CSS</b>, it is meant to be a place to <b class="important">showcase</b> my abilities and portfolio.
+                    </p>
+                </section>
+            </article>
+        </div>
+
+        <div id="education">
+            <aside>
+                <img src="./images/keyboard.png" id="keyboard"/>
+            </aside>
+            <article>
+                <section>
+                    <h4>Past Education</h4>
+                    <p>
+                        A-Level Grades: <b class="important">A*AB</b> in <b class="important">Mathematics</b>, <b class="important">Physics</b>, and <b class="important">Further Mathematics</b>
+                    </p>
+                    <p>
+                        GCSE Grades: <b class="important">9-7</b>, including a <b class="important">Grade 9 in Computer Science</b>
+                        BTEC Level 2 Qualifications: <b class="important">Distinction in Enterprise</b> and <b class="important">Merit in Engineering</b>
+                    </p>
+                </section>
+            </article>
+        </div>
+
+        <div id="contact">
+            <article>
+                <h4>Contact Me</h4>
+                <section>
+                    <p>
+                        If you want to <b class="important">contact me</b>, be sure to email me at <b class="important">zionadewalex@gmail.com</b>.
+                    </p>
+                    <p>
+                        Alternatively, you can also <b class="important">message me</b> on <b class="important">LinkedIn</b> but <b class="important">email is preferred!</b>
+                    </p>
+                    <p>
+                        (messager pigeon is <b class="important">not</b> a viable means of communication!!!)
+                    </p>
+                </section>
+            </article>
+            <aside>
+                <img src="./images/pigeon.png" id="pigeon"/>
+            </aside>
+        </div>
     </main>
 
     <footer>
