--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#intro">About Myself</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -67,9 +67,9 @@
             </aside>
         </div>
 
-        <div id="portfolio">
+        <div id="projects">
             <article>
-                <h4>Portfolio</h4>
+                <h4>Projects</h4>
                 <section>
                     <p>
                         <b><i><a href="https://github.com/octoberluwa/purpfish" target="_blank">Purpfish</a></i></b>
