--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="./login.html">Blog</a></li>
         </ul>
     </nav>
 
