--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             </aside>
             <article>
                 <section>
-                <h4>About Myself</h4>
+                <h2>About Myself</h2>
                 <p>
                     My name is <b class="important">Zion</b> Adewale and I am a student at <b class="important">Queen Mary University of London</b> 
                     within the School of Electronic Engineering. I am studying <b class="important">BSc Computer Science</b> with a Year in Industry.
                 </p>
-                <h4 id="my-cv">My CV</h4>
+                <h2 id="my-cv">My CV</h2>
                 <p>
                     You can download my CV via this <a href="/my_CV.html" download>link</a>
                 </p>
@@ -48,15 +48,15 @@
         <div id="skills">
             <article>
                 <section>
-                    <h4>Skills</h4>
+                    <h2>Skills</h2>
                     <p>
                         I have programming experience in web development with langauges like <b class="important">JavaScript</b> and <b class="important">Typescript</b> as well as 
                         with frameworks like <b class="important">Svelte</b> and <b class="important">React JS.</b>
 
-                        I also have experience with <b class="important">Java</b>, <b class="important">Kotlin</b> and <b class="important">Python</b>. 
+                        I also have experience with <b class="important">Java</b>, <b class="important">Golang</b> and <b class="important">Python</b>. 
                     </p>
                     <p>
-                        I have great experience with Linux distributions like NixOS, <b class="important">Ubuntu Server</b>, Arch and Mint.
+                        I have great experience with <b class="important">Linux</b> distributions like NixOS, <b class="important">Ubuntu Server</b>, Arch and Mint.
                     </p>
                     <p>
                         I also have a solid understanding about <b class="important">computer hardware</b> and have built personal computers including my home lab.
@@ -70,7 +70,7 @@
 
         <div id="projects">
             <article>
-                <h4>Projects</h4>
+                <h2>Projects</h2>
                 <section>
                     <p>
                         <b><i><a href="https://github.com/octoberluwa/purpfish" target="_blank">Purpfish</a></i></b>
@@ -86,6 +86,15 @@
                         The website <b class="important">you are viewing right now!</b> It has been made so far with only <b class="important">HTML and CSS</b>, it is meant to be a place to <b class="important">showcase</b> my abilities and portfolio.
                     </p>
                 </section>
+                <section>
+                    <p>
+                        <b><i>My Personal Computer and Home Server</i></b>
+                        <br/><br/>
+                        Both were built by me for their various purposes. My <b class="important">personal computer</b> can handle intensive workloads including <b class="important">Blender</b> and <b class="important">virtualisation.</b>
+                        My home server works as <b class="important">network-attached storage</b> and utilise <b class="important">generative artifical intelligence</b> like <b class="important">language learning models</b>. 
+                    </p>
+                    <br/>
+                </section>
             </article>
         </div>
 
@@ -95,13 +104,13 @@
             </aside>
             <article>
                 <section>
-                    <h4>Past Education</h4>
+                    <h2>Past Education</h2>
                     <p>
                         A-Level Grades: <b class="important">A*AB</b> in <b class="important">Mathematics</b>, <b class="important">Physics</b>, and <b class="important">Further Mathematics</b>
                     </p>
                     <p>
                         GCSE Grades: <b class="important">9-7</b>, including a <b class="important">Grade 9 in Computer Science</b>
-                        BTEC Level 2 Qualifications: <b class="important">Distinction in Enterprise</b> and <b class="important">Merit in Engineering</b>
+                        BTEC Level h2 Qualifications: <b class="important">Distinction in Enterprise</b> and <b class="important">Merit in Engineering</b>
                     </p>
                 </section>
             </article>
@@ -109,7 +118,7 @@
 
         <div id="contact">
             <article>
-                <h4>Contact Me</h4>
+                <h2>Contact Me</h2>
                 <section>
                     <p>
                         If you want to <b class="important">contact me</b>, be sure to email me at <b class="important">zionadewalex@gmail.com</b>.
