--- a/login.html
+++ b/login.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="./index.html">Portfolio Website</a></li>
+        </ul>
+    </nav>
     <h1>Blog</h1>
     <aside id="signin">
         <form>
