Added some design elements like fonts.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Macondo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="texture"></div>
     <nav>
         <ul>
-            <li><a href="#intro">About Myself</a></li>
+            <li><a href="#intro">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
@@ -19,7 +22,7 @@
     </nav>
 
     <header>
-        <h1>Zion A</h1><div id="header-cursor"></div>
+        <h1>ZION A</h1><div id="header-cursor"></div>
     </header>
 
     <main>
@@ -32,14 +35,14 @@
             </aside>
             <article>
                 <section>
-                <h2>About Myself</h2>
+                <h2>About Me</h2>
                 <p>
                     My name is <b class="important">Zion</b> Adewale and I am a student at <b class="important">Queen Mary University of London</b> 
                     within the School of Electronic Engineering. I am studying <b class="important">BSc Computer Science</b> with a Year in Industry.
                 </p>
                 <h2 id="my-cv">My CV</h2>
                 <p>
-                    You can download my CV via this <a href="/my_CV.html" download>link</a>
+                    You can download my CV via this <a href="/my_CV.html" download>&lt;link&gt;</a>
                 </p>
                 </section>
             </article>
@@ -72,26 +75,26 @@
             <article>
                 <h2>Projects</h2>
                 <section>
+                    <h3><a href="https://github.com/octoberluwa/purpfish" target="_blank">Purpfish</a></h3>
                     <p>
-                        <b><i><a href="https://github.com/octoberluwa/purpfish" target="_blank">Purpfish</a></i></b>
-                        <br/><br/>
                         A <b class="important">learning web app</b> for kids that I am developing. It uses <b class="important">text to speech</b> to help with <b class="important">spelling</b> and has questions relating to <b class="important">times tables</b>.
-                        It uses <b class="important">React JS</b> so that everything is seamless and less time waiting for the page to refresh due to <b class="important">dynamic updates</b>. 
+                        It uses <b class="important">React JS</b> so that everything is seamless and less time waiting for the page to refresh due to <b class="important">dynamic updates</b>. <a href="https://github.com/octoberluwa/purpfish" target="_blank">&lt;link&gt;</a> 
                     </p>
                 </section>
                 <section>
+                    <h3><a href="https://github.com/octoberluwa/portfolio-website" target="_blank">Portfolio Website</a></h3>
                     <p>
-                        <b><i><a href="https://github.com/octoberluwa/portfolio-website" target="_blank">Portfolio Website</a></i></b>
-                        <br/><br/>
-                        The website <b class="important">you are viewing right now!</b> It has been made so far with only <b class="important">HTML and CSS</b>, it is meant to be a place to <b class="important">showcase</b> my abilities and portfolio.
+                        The website <b class="important">you are viewing right now!</b> It has been made so far with only <b class="important">HTML and CSS</b>, it is meant to be a place to <b class="important">showcase</b> my abilities and portfolio. <a href="https://github.com/octoberluwa/portfolio-website" target="_blank">&lt;link&gt;</a>
                     </p>
                 </section>
                 <section>
+                    <h3>My Personal Computer and Home Server</h3>
                     <p>
-                        <b><i>My Personal Computer and Home Server</i></b>
-                        <br/><br/>
-                        Both were built by me for their various purposes. My <b class="important">personal computer</b> can handle intensive workloads including <b class="important">Blender</b> and <b class="important">virtualisation.</b>
+                        Both were built by me for their various purposes. My personal computer can handle intensive workloads including <b class="important">Blender</b> and <b class="important">virtualisation.</b>
                         My home server works as <b class="important">network-attached storage</b> and utilise <b class="important">generative artifical intelligence</b> like <b class="important">language learning models</b>. 
+                    </p>
+                    <p>
+                        I have <b class="important">more projects</b> that are quite private but do <b class="important">let me know</b> if you want to see more!
                     </p>
                     <br/>
                 </section>
@@ -110,7 +113,7 @@
                     </p>
                     <p>
                         GCSE Grades: <b class="important">9-7</b>, including a <b class="important">Grade 9 in Computer Science</b>
-                        BTEC Level h2 Qualifications: <b class="important">Distinction in Enterprise</b> and <b class="important">Merit in Engineering</b>
+                        BTEC Level 2 Qualifications: <b class="important">Distinction in Enterprise</b> and <b class="important">Merit in Engineering</b>
                     </p>
                 </section>
             </article>
@@ -138,7 +141,7 @@
     </main>
 
     <footer>
-        
+        <p>&copy; Copyright 2025 Zion Adewale</p>
     </footer>
 </body>
 </html>
