--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="texture"></div>
     <nav>
         <ul>
             <li><a href="./index.html">Portfolio Website</a></li>
