--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div id="texture"></div>
     <nav>
         <ul>
-            <li><a href="./index.html">Portfolio Website</a></li>
+            <li><a href="./index.html">&larr; Back to Portfolio Website</a></li>
         </ul>
     </nav>
     <h1>Blog</h1>
