--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
                 <h2 id="my-cv">My CV</h2>
                 <p>
-                    You can download my CV via this <a href="/my_CV.html" download>&lt;link&gt;</a>
+                    You can download my CV via this <a href="/src/curriculum_vitae.pdf" download>&lt;link&gt;</a>
                 </p>
                 </section>
             </article>
@@ -53,7 +53,7 @@
                 <section>
                     <h2>Skills</h2>
                     <p>
-                        I have programming experience in web development with langauges like <b class="important">JavaScript</b> and <b class="important">Typescript</b> as well as 
+                        I have programming experience in web development with langauges like <b class="important">JavaScript</b> and <b class="important">TypeScript</b> as well as 
                         with frameworks like <b class="important">Svelte</b> and <b class="important">React JS.</b>
 
                         I also have experience with <b class="important">Java</b>, <b class="important">Golang</b> and <b class="important">Python</b>. 
