--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <h3>My Personal Computer and Home Server</h3>
                     <p>
                         Both were built by me for their various purposes. My personal computer can handle intensive workloads including <b class="important">Blender</b> and <b class="important">virtualisation.</b>
-                        My home server works as <b class="important">network-attached storage</b> and utilise <b class="important">generative artifical intelligence</b> like <b class="important">language learning models</b>. 
+                        My home server works as <b class="important">network-attached storage</b> and utilises <b class="important">generative artifical intelligence</b> like <b class="important">language learning models</b>. 
                     </p>
                     <p>
                         I have <b class="important">more projects</b> that are quite private but do <b class="important">let me know</b> if you want to see more!
