Replaced temporary picture.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <aside>
                 <div id="tv">
                     <img src="./images/tv.png" id="tv-frame"/>
-                    <img src="./images/me_silly.png" id="me-silly"/>
+                    <img src="./images/me.png" id="me-silly"/>
                 </div>
             </aside>
             <article>
