--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         Alternatively, you can also <b class="important">message me</b> on <b class="important">LinkedIn</b> but <b class="important">email is preferred!</b>
                     </p>
                     <p>
-                        (messanger pigeon is <b class="important">not</b> a viable means of communication!!!)
+                        (messenger pigeon is <b class="important">not</b> a viable means of communication!!!)
                     </p>
                 </section>
             </article>
