Applied laptop image.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <aside>
                 <div id="tv">
                     <img src="./images/tv.png" id="tv-frame"/>
-                    <img src="./images/me.png" id="me-silly"/>
+                    <img src="./images/my_laptop.jpg" id="me-silly"/>
                 </div>
             </aside>
             <article>
